gccida/g2/rm_other_notes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1820:4: error: expected ';' after expression
rtx v5; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1820:5: error: use of undeclared identifier 'v5'
rtx v5; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1825:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1825:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1835:1: error: use of undeclared identifier 'v5'
v5 = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1841:20: error: use of undeclared identifier 'v5'
while ( *( _WORD *)v5 != 37 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1843:1: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1843:6: error: use of undeclared identifier 'v5'
v5 = v5[1].fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1844:13: error: use of undeclared identifier 'v5'
if ( rtx == v5 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1847:16: error: use of undeclared identifier 'v5'
v9 = ( __int64)v5[1]; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1848:1: error: use of undeclared identifier 'v10'
v10 = v5; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1848:7: error: use of undeclared identifier 'v5'
v10 = v5; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1851:24: error: use of undeclared identifier 'v10'
v11.rtwint = ( __int64)v10; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1852:1: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1852:7: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1854:26: error: use of undeclared identifier 'v10'
*( _QWORD *)( v9 + 24) = v10; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1855:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1856:14: error: use of undeclared identifier 'v10'
*( _QWORD *)&v10[1] = v9; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/haifa-sched.c:1860:13: error: use of undeclared identifier 'v10'
if ( rtx == v10 ) 
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/rm_other_notes/src/obj/haifa-sched.o] Error 1
